fix: word spacing on h2 in the about page

--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -392,7 +392,7 @@
 
       & > h2 {
         font-size: variables.$titleFontSize;
-        word-spacing: 0.5rem; 
+        word-spacing: 0; 
         letter-spacing: 0.2rem; 
         margin-top: 0;
       }
@@ -434,7 +434,7 @@
   .career{
     &>h2{
       font-size: variables.$titleFontSize;
-      word-spacing: 0.5rem; 
+      word-spacing: 0rem; 
       letter-spacing: 0.2rem; 
       margin-top: 0;
     }
